tests/build/fixtures/invalid-syntax/qmlts.config.ts
export default {{{
  this is not valid typescript
